force-app/main/default/objects/MessagingSession/fields/ConversationSentiment__c.field-meta.xml
<CustomField>
    <fullName>ConversationSentiment__c</fullName>
    <description>The conversation sentiment classification</description>
    <label>Conversation Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>