force-app/main/default/objects/MessagingSession/fields/ConversationSentimentExplanation__c.field-meta.xml
<CustomField>
    <fullName>ConversationSentimentExplanation__c</fullName>
    <description>The explanation to the sentiment classification</description>
    <label>Conversation Sentiment Explanation</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>