force-app/main/default/objects/MessagingSession/fields/SentimentAnalysisDate__c.field-meta.xml
<CustomField>
    <fullName>SentimentAnalysisDate__c</fullName>
    <label>Sentiment Analysis Date</label>
    <type>DateTime</type>
</CustomField>