force-app/main/default/objects/MessagingSession/fields/SentimentExplanation__c.field-meta.xml
<CustomField>
    <fullName>SentimentExplanation__c</fullName>
    <description>The explanation to the sentiment classification</description>
    <label>Sentiment Explanation</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>