force-app/main/default/objects/MessagingSession/fields/SentimentExplanationLocale__c.field-meta.xml
<CustomField>
    <fullName>SentimentExplanationLocale__c</fullName>
    <description>Explanation translation to the triggering user&apos;s locale</description>
    <label>Sentiment Explanation (Locale)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>